# napari-buds

./: LICENSE  README - Copy.md  README.md  REQUIREMENTS.txt  REQUIREMENTS.txt.txt  filename.pkl  good_classifier_for_example_data.pkl  setup.cfg  smFISH segmentation example Internship students.ipynb  tox.ini
.github/workflows/: test_and_deploy.yml
notebooks/: Batch classification for Napari-buds.ipynb  Extract_Mother_Buds_relations_from_Masks_and_intergrate_FQ_spot_data.ipynb  Open Test Images Napari.ipynb  good_classifier_for_example_data.pkl  smFISH segmentation example Internship students.ipynb
src/napari_buds/: __init__.py  _segmentation.py  _segmentation_functions.py  _testing.py  _testing_working.py  _threshold.py  _train_classifier.py  _translate.py  _widget.py  _widget_overview.py  _widgets.py  napari.yaml  open_images.py  opening_test_images.py
src/napari_buds/_tests/: __init__.py  test_reader.py  test_sample_data.py  test_widget.py  test_widgets.py  test_writer.py
