[metadata]
name = napari-buds
version = 0.0.2
description = Random-forest automated bud annotation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SanderSMFISH/napari-buds
author = Sander van Otterdijk
author_email = scvanotterdijk@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/SanderSMFISH/napari-buds/issues
    Documentation = https://github.com/SanderSMFISH/napari-buds#README.md
    Source Code = https://github.com/SanderSMFISH/napari-buds
    User Support = https://github.com/SanderSMFISH/napari-buds/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    alabaster=0.7.12=pypi_0
    appdirs=1.4.4=pypi_0
    arrow=1.2.2=pypi_0
    asttokens=2.0.7=pypi_0
    attrs=22.1.0=pypi_0
    babel=2.10.3=pypi_0
    backcall=0.2.0=pypi_0
    binaryornot=0.4.4=pypi_0
    build=0.8.0=pypi_0
    bzip2=1.0.8=h8ffe710_4
    ca-certificates=2022.6.15=h5b45459_0
    cachey=0.2.1=pypi_0
    certifi=2022.6.15=pypi_0
    chardet=5.0.0=pypi_0
    charset-normalizer=2.1.0=pypi_0
    click=8.1.3=pypi_0
    cloudpickle=2.1.0=pypi_0
    colorama=0.4.5=pypi_0
    commonmark=0.9.1=pypi_0
    cookiecutter=2.1.1=pypi_0
    dask=2022.8.0=pypi_0
    debugpy=1.6.2=pypi_0
    decorator=5.1.1=pypi_0
    docstring-parser=0.14.1=pypi_0
    docutils=0.19=pypi_0
    entrypoints=0.4=pypi_0
    executing=0.9.1=pypi_0
    freetype-py=2.3.0=pypi_0
    fsspec=2022.7.1=pypi_0
    heapdict=1.0.1=pypi_0
    hsluv=5.0.3=pypi_0
    idna=3.3=pypi_0
    imageio=2.21.1=pypi_0
    imagesize=1.4.1=pypi_0
    importlib-metadata=4.12.0=pypi_0
    ipykernel=6.15.1=pypi_0
    ipython=8.4.0=pypi_0
    ipython-genutils=0.2.0=pypi_0
    jedi=0.18.1=pypi_0
    jinja2=3.1.2=pypi_0
    jinja2-time=0.2.0=pypi_0
    joblib=1.1.0=pypi_0
    jsonschema=4.9.1=pypi_0
    jupyter-client=7.3.4=pypi_0
    jupyter-core=4.11.1=pypi_0
    kiwisolver=1.4.4=pypi_0
    libffi=3.4.2=h8ffe710_5
    libzlib=1.2.12=h8ffe710_2
    locket=1.0.0=pypi_0
    macro-kit=0.3.8=pypi_0
    magic-class=0.6.8=pypi_0
    magicgui=0.5.1=pypi_0
    markupsafe=2.1.1=pypi_0
    matplotlib-inline=0.1.3=pypi_0
    napari=0.4.16=pypi_0
    napari-buds=0.0.1=dev_0
    napari-console=0.0.4=pypi_0
    napari-plugin-engine=0.2.0=pypi_0
    napari-svg=0.1.6=pypi_0
    nest-asyncio=1.5.5=pypi_0
    networkx=2.8.5=pypi_0
    npe2=0.6.1=pypi_0
    numpy=1.23.1=pypi_0
    numpydoc=1.4.0=pypi_0
    openssl=3.0.5=h8ffe710_1
    packaging=21.3=pypi_0
    pandas=1.4.3=pypi_0
    parso=0.8.3=pypi_0
    partd=1.2.0=pypi_0
    pep517=0.13.0=pypi_0
    pickleshare=0.7.5=pypi_0
    pillow=9.2.0=pypi_0
    pint=0.19.2=pypi_0
    pip=22.2.2=pyhd8ed1ab_0
    pooch=1.6.0=pypi_0
    prompt-toolkit=3.0.30=pypi_0
    psutil=5.9.1=pypi_0
    psygnal=0.3.5=pypi_0
    pure-eval=0.2.2=pypi_0
    pydantic=1.9.1=pypi_0
    pygments=2.12.0=pypi_0
    pyopengl=3.1.6=pypi_0
    pyparsing=3.0.9=pypi_0
    pyqt5=5.15.7=pypi_0
    pyqt5-qt5=5.15.2=pypi_0
    pyqt5-sip=12.11.0=pypi_0
    pyrsistent=0.18.1=pypi_0
    python=3.9.13=hcf16a7b_0_cpython
    python-dateutil=2.8.2=pypi_0
    python-slugify=6.1.2=pypi_0
    python_abi=3.9=2_cp39
    pytomlpp=1.0.11=pypi_0
    pytz=2022.1=pypi_0
    pywavelets=1.3.0=pypi_0
    pywin32=304=pypi_0
    pyyaml=6.0=pypi_0
    pyzmq=23.2.0=pypi_0
    qtconsole=5.3.1=pypi_0
    qtpy=2.1.0=pypi_0
    requests=2.28.1=pypi_0
    rich=12.5.1=pypi_0
    scikit-image=0.19.3=pypi_0
    scikit-learn=1.1.2=pypi_0
    scipy=1.9.0=pypi_0
    setuptools=63.4.2=py39hcbf5309_0
    six=1.16.0=pypi_0
    snowballstemmer=2.2.0=pypi_0
    sphinx=5.1.1=pypi_0
    sphinxcontrib-applehelp=1.0.2=pypi_0
    sphinxcontrib-devhelp=1.0.2=pypi_0
    sphinxcontrib-htmlhelp=2.0.0=pypi_0
    sphinxcontrib-jsmath=1.0.1=pypi_0
    sphinxcontrib-qthelp=1.0.3=pypi_0
    sphinxcontrib-serializinghtml=1.1.5=pypi_0
    sqlite=3.39.2=h8ffe710_0
    stack-data=0.3.0=pypi_0
    superqt=0.3.3=pypi_0
    text-unidecode=1.3=pypi_0
    threadpoolctl=3.1.0=pypi_0
    tifffile=2022.8.8=pypi_0
    tk=8.6.12=h8ffe710_0
    tomli=2.0.1=pypi_0
    toolz=0.12.0=pypi_0
    tornado=6.2=pypi_0
    tqdm=4.64.0=pypi_0
    traitlets=5.3.0=pypi_0
    typer=0.6.1=pypi_0
    typing-extensions=4.3.0=pypi_0
    tzdata=2022a=h191b570_0
    ucrt=10.0.20348.0=h57928b3_0
    urllib3=1.26.11=pypi_0
    vc=14.2=hb210afc_6
    vispy=0.10.0=pypi_0
    vs2015_runtime=14.29.30037=h902a5da_6
    wcwidth=0.2.5=pypi_0
    wheel=0.37.1=pyhd8ed1ab_0
    wrapt=1.14.1=pypi_0
    xz=5.2.5=h62dcd97_1
    zipp=3.8.1=pypi_0

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-buds = napari_buds:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
